git commit "proyecto finalizado" $finalizado

--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -212,7 +212,7 @@
                             <button type="submit">Enviar</button>
                         </div>
                     </form> 
-                    
+            <script src="script.js"></script>
             </div>
             
             <footer>
